--- a/comtudo.html
+++ b/comtudo.html
@@ -10,7 +10,7 @@
         }
 
         th, td {
-            padding: 16px; /* Aumento do espaçamento de célula */
+            padding: 16px;
             text-align: center;
         }
 
